force-app/main/default/objects/Sales_Invoice__c/Sales_Invoice__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice</label>
    <nameField>
        <label>Sales Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>