force-app/main/default/objects/Sales_Invoice__c/fields/Acknowledgment_No__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_No__c</fullName>
    <label>Acknowledgment_No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>