force-app/main/default/objects/Sales_Invoice__c/fields/Against_Customer_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Against_Customer_Return_Amount__c</fullName>
    <label>Against Customer Return Amount</label>
    <summarizedField>Credit_Amount__c.Amount__c</summarizedField>
    <summaryForeignKey>Credit_Amount__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>