force-app/main/default/objects/Sales_Invoice__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <label>Amount Received</label>
    <summarizedField>Receipt_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt_Item__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt_Item__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>