force-app/main/default/objects/Sales_Invoice__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <formula>Customer__r.CustomerId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Id</label>
    <type>Text</type>
</CustomField>