force-app/main/default/objects/Sales_Invoice__c/fields/Customer_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Outstanding_Amount__c</fullName>
    <formula>Customer__r.Outstanding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>