force-app/main/default/objects/Sales_Invoice__c/fields/Daily_log__c.field-meta.xml
<CustomField>
    <fullName>Daily_log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily log</label>
    <referenceTo>DailyLog__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>