force-app/main/default/objects/Sales_Invoice__c/fields/Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>Doc_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Doc Date</label>
    <type>Date</type>
</CustomField>