force-app/main/default/objects/Sales_Invoice__c/fields/Driver_Code__c.field-meta.xml
<CustomField>
    <fullName>Driver_Code__c</fullName>
    <formula>Daily_log__r.Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Code</label>
    <type>Text</type>
</CustomField>