force-app/main/default/objects/Sales_Invoice__c/fields/E_invoice_Generate_Date__c.field-meta.xml
<CustomField>
    <fullName>E_invoice_Generate_Date__c</fullName>
    <label>E-invoice Generate Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>