force-app/main/default/objects/Sales_Invoice__c/fields/EinvMessage__c.field-meta.xml
<CustomField>
    <fullName>EinvMessage__c</fullName>
    <label>EinvMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>