force-app/main/default/objects/Sales_Invoice__c/fields/EwayBillNo__c.field-meta.xml
<CustomField>
    <fullName>EwayBillNo__c</fullName>
    <label>EwayBillNo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>