force-app/main/default/objects/Sales_Invoice__c/fields/Grand_Total_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_after_discount__c</fullName>
    <label>Grand Total after discount</label>
    <summarizedField>Sales_Invoice_Item__c.Total_after_discount__c</summarizedField>
    <summaryForeignKey>Sales_Invoice_Item__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>