force-app/main/default/objects/Sales_Invoice__c/fields/Grand_Total_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Discounted__c</fullName>
    <formula>IF( New_Flow__c == true,
			Grand_Total__c,
			IF(TEXT(Payment_Type__c)==&apos;Credit&apos;,
						Grand_Total__c ,  
						IF(Grand_Total_after_discount__c != 0.0 , 
									Grand_Total_after_discount__c - (Grand_Total_after_discount__c *  Customer__r.Cash_Discount__c), 
									Grand_Total__c - (Grand_Total__c *  Customer__r.Cash_Discount__c) 
								)
					)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total (Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>