force-app/main/default/objects/Sales_Invoice__c/fields/Gstin__c.field-meta.xml
<CustomField>
    <fullName>Gstin__c</fullName>
    <label>GST No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>