force-app/main/default/objects/Sales_Invoice__c/fields/Invoice_Cancellation_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Cancellation_Time__c</fullName>
    <label>Invoice Cancellation Date</label>
    <type>DateTime</type>
</CustomField>