force-app/main/default/objects/Sales_Invoice__c/fields/Invoice_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Full_Name__c</fullName>
    <label>Invoice Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>