force-app/main/default/objects/Sales_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>