force-app/main/default/objects/Sales_Invoice__c/fields/InvoiceTax__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTax__c</fullName>
    <label>InvoiceTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>