force-app/main/default/objects/Sales_Invoice__c/fields/Journal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Journal_Amount__c</fullName>
    <label>Journal Amount</label>
    <summarizedField>Journal_Entry__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Journal_Entry__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Journal_Entry__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>