force-app/main/default/objects/Sales_Invoice__c/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <formula>TODAY() - Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>