force-app/main/default/objects/Sales_Invoice__c/fields/Outstanding_API_Last_Synchronized_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_API_Last_Synchronized_Date__c</fullName>
    <label>Outstanding API Last Synchronized  Date</label>
    <type>DateTime</type>
</CustomField>