force-app/main/default/objects/Sales_Invoice__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>