force-app/main/default/objects/Sales_Invoice__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>If(NOT(ISPICKVAL( Sales_Invoice_Status__c ,&apos;Cancelled&apos; )),  
			ROUND((Invoice_Total__c  -  Amount_Received__c) -  Total_Return_Amount__c,0)-Journal_Amount__c- Against_Customer_Return_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>