force-app/main/default/objects/Sales_Invoice__c/fields/Pending_Amount_SAP__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount_SAP__c</fullName>
    <label>Pending Amount SAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>