force-app/main/default/objects/Sales_Invoice__c/fields/Sales_Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Status__c</fullName>
    <defaultValue>&apos;Generated&apos;</defaultValue>
    <label>Sales Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>