force-app/main/default/objects/Sales_Invoice__c/fields/Send_to_GSTZen__c.field-meta.xml
<CustomField>
    <fullName>Send_to_GSTZen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to GSTZen</label>
    <type>Checkbox</type>
</CustomField>