force-app/main/default/objects/Sales_Invoice__c/fields/SI_Id__c.field-meta.xml
<CustomField>
    <fullName>SI_Id__c</fullName>
    <label>SI Id</label>
    <type>AutoNumber</type>
</CustomField>