force-app/main/default/objects/Sales_Invoice__c/fields/Skip_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Skip_Credit_Limit__c</fullName>
    <formula>Customer__r.Skip_Credit_Limit_For_Next_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skip Credit Limit</label>
    <type>Checkbox</type>
</CustomField>