force-app/main/default/objects/Sales_Invoice__c/fields/Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Tax Date</label>
    <type>Date</type>
</CustomField>