force-app/main/default/objects/Sales_Invoice__c/fields/Total_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Amount__c</fullName>
    <label>Total Return Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>