force-app/main/default/objects/Sales_Invoice__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>