force-app/main/default/objects/Sales_Invoice__c/fields/vehicle_crew__c.field-meta.xml
<CustomField>
    <fullName>vehicle_crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vehicle crew</label>
    <referenceTo>vehicle_crew__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>