force-app/main/default/objects/Sales_Invoice__c/validationRules/Return_Amount_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Amount_value</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Grand_Total__c  &lt; Against_Customer_Return_Amount__c ,TRUE,FALSE)</errorConditionFormula>
    <errorMessage>The Invoice Grand Total Amount must be equal to or greater than the customer return amount.</errorMessage>
</ValidationRule>