force-app/main/default/objects/Sales_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Grand_Total_Discounted__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Invoice_Total__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Type__c</columns>
    <columns>Send_to_GSTZen__c</columns>
    <columns>Sent_to_SAP__c</columns>
    <columns>GST_applicable_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>