force-app/main/default/objects/Sales_Invoice__c/listViews/Invoices_Not_Paid.listView-meta.xml
<ListView>
    <fullName>Invoices_Not_Paid</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Customer__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Grand_Total_Discounted__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Order__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Invoices Not Paid</label>
</ListView>