force-app/main/default/objects/Sales_Invoice__c/listViews/Open_Invoices.listView-meta.xml
<ListView>
    <fullName>Open_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>Customer__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Grand_Total_Discounted__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Order__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>CompanyId__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Pending_Amount__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Open Invoices</label>
</ListView>